Implement CLI entrypoint
Agent-Id: agent-872c9b5a-3ec9-4f3f-b558-2e079180a3ed
Linked-Note-Id: 1bc08be9-467a-4e90-a039-736e10e07ee7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ dev = [
     "pre-commit>=4.0.0",
 ]
 
+[project.scripts]
+compass-eval = "compass.evals.cli:main"
+
 [project.urls]
 Homepage = "https://github.com/sardanaaman/langgraph-compass"
 Documentation = "https://github.com/sardanaaman/langgraph-compass#readme"
